# shotauto

./: PROGRESS.md  package-lock.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs
