[package]
name = "shotauto"
version = "0.1.0"
description = "YouTube Shorts Automation Desktop App"
authors = ["david-devsecops"]
edition = "2021"

[lib]
name = "shotauto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (YouTube API, Telegram)
reqwest = { version = "0.12", features = ["json"] }

# Configuration
toml = "0.8"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async channels
async-channel = "2"
